--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@nuxt/eslint-config": "^0.1.1",
+    "eslint": "^8.40.0",
     "nuxt": "^3.4.0"
   }
 }
