--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,15 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "node": true
-  },
-  "parser": "vue-eslint-parser",
-  "parserOptions": {
-    "parser": "@typescript-eslint/parser"
-  },
-  "extends": [
-    "@nuxtjs/eslint-config-typescript",
-    "plugin:prettier/recommended"
-  ]
+    "root": true,
+    "env": {
+        "browser": true,
+        "node": true
+    },
+    "parser": "vue-eslint-parser",
+    "parserOptions": {
+        "parser": "@typescript-eslint/parser"
+    },
+    "extends": ["@nuxtjs/eslint-config-typescript", "plugin:prettier/recommended"],
+    "rules": {
+        "vue/no-multiple-template-root": 0
+    }
 }
