--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "nuxt-app",
-  "private": true,
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare",
-    "lint": "eslint .",
-    "prepare": "husky install"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^17.6.3",
-    "@commitlint/config-conventional": "^17.6.3",
-    "@nuxtjs/eslint-config": "^12.0.0",
-    "@nuxtjs/eslint-config-typescript": "^12.0.0",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "@typescript-eslint/parser": "^5.59.6",
-    "eslint": "^8.40.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.0",
-    "lint-staged": "^13.2.2",
-    "nuxt": "^3.4.0",
-    "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.3",
-    "sass": "^1.62.1",
-    "sass-loader": "^13.2.2",
-    "typescript": "^5.0.4"
-  },
-  "volta": {
-    "node": "18.16.0",
-    "yarn": "1.22.19"
-  }
+    "name": "nuxt-app",
+    "private": true,
+    "scripts": {
+        "build": "nuxt build",
+        "dev": "nuxt dev",
+        "generate": "nuxt generate",
+        "preview": "nuxt preview",
+        "postinstall": "nuxt prepare",
+        "lint": "eslint .",
+        "prepare": "husky install"
+    },
+    "devDependencies": {
+        "@commitlint/cli": "^17.6.3",
+        "@commitlint/config-conventional": "^17.6.3",
+        "@nuxtjs/eslint-config": "^12.0.0",
+        "@nuxtjs/eslint-config-typescript": "^12.0.0",
+        "@nuxtjs/style-resources": "^1.2.1",
+        "@typescript-eslint/parser": "^5.59.6",
+        "eslint": "^8.40.0",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.0",
+        "lint-staged": "^13.2.2",
+        "normalize.css": "^8.0.1",
+        "nuxt": "^3.4.0",
+        "prettier": "^2.8.8",
+        "pretty-quick": "^3.1.3",
+        "sass": "^1.62.1",
+        "sass-loader": "^13.2.2",
+        "typescript": "^5.0.4"
+    },
+    "volta": {
+        "node": "18.16.0",
+        "yarn": "1.22.19"
+    }
 }
