--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
         "lint": "eslint .",
         "prepare": "husky install"
     },
+    "dependencies": {
+        "nuxt-icons": "^3.2.1"
+    },
     "devDependencies": {
         "@commitlint/cli": "^17.6.3",
         "@commitlint/config-conventional": "^17.6.3",
