--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "lint-staged": "^13.2.2",
         "normalize.css": "^8.0.1",
         "nuxt": "^3.4.0",
+        "nuxt-gtag": "^1.1.1",
         "prettier": "^2.8.8",
         "pretty-quick": "^3.1.3",
         "sass": "^1.62.1",
